Source/WebCore/platform/graphics/skia/PlatformContextSkia.h
@@ -190,7 +190,8 @@ public:
 private:
     // Used when restoring and the state has an image clip. Only shows the pixels in
     // m_canvas that are also in imageBuffer.
-    void applyClipFromImage(const FloatRect&, const SkBitmap&);
+    // The clipping rectangle is given in absolute coordinates.
+    void applyClipFromImage(const SkRect&, const SkBitmap&);
 
     // common code between setupPaintFor[Filling,Stroking]
     void setupShader(SkPaint*, Gradient*, Pattern*, SkColor) const;
